# Blockchain-GRPC

./: .dockerignore  .gitignore  Blockchain-GRPC.sln  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.json  config.json  docker-compose.yml
.cargo/: config.toml
.github/: copilot-instructions.md
Smart-Contract/: Program.cs  README.md  SmartContract.RestBridge.csproj  appsettings.json
Smart-Contract/Controllers/: BlocksController.cs  GraphsController.cs  HealthController.cs
Smart-Contract/Models/: Dtos.cs
Smart-Contract/Services/: GrpcBlockchainClient.cs
code/: Cargo.toml  build.rs
code/src/: lib.rs
code/src/domain/: graph.rs
docker/: entrypoint.sh
docs/: API.md  ARCHITECTURE.md  BUG_FIX_GRAPH_CREATION.md  BUG_FIX_HASH_LINKAGE.md  BUILD_OPTIMIZATION.md  BUILD_TROUBLESHOOTING.md  CHANGELOG.md  ESTRUTURA_DE_DADOS_BLOCKCHAIN.md  EXPLICACAO_MAIN.md  GUIA_DE_ESTUDOS_RUST_NO_PROJETO.md  HYPERLEDGER_FABRIC_PARALLEL.md  PROJECT_ANALYSIS.md  PROJECT_COMPLETE_GUIDE.md  QUICKSTART.md  apresentacao_servico_blockchain.md
examples/: client_example.rs
scripts/: build.sh  fast-build.ps1  run.ps1  setup.sh  test_grpc.sh
src/: main.rs
src/application/services/: blockchain_service.rs  mod.rs  validation_service.rs
src/application/use_cases/: mod.rs  verify_graphs.rs
src/config/: settings.rs
src/domain/: block.rs  graph.rs  mod.rs  traits.rs  transaction.rs
src/infrastructure/grpc/: mod.rs  server.rs
tests/: integration_tests.rs  test_graph_creation.rs
tutorials/: QUICKSTART.md  USAGE.md
(+7 files in other folders)
