[package]
name = "blockchain-grpc"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Jorge"]
description = "Enterprise-grade multi-graph blockchain with gRPC interface"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.11"
prost = "0.12"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Persistence
rocksdb = "0.22"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# HTTP JSON proxy (for curl/Postman)
axum = "0.7"
tower = "0.4"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[example]]
name = "client_example"
path = "examples/client_example.rs"
